--- a/templated-synchronous/index.html
+++ b/templated-synchronous/index.html
@@ -32,7 +32,7 @@
 					
 					<!-- Logo -->
 					<div id="logo">
-						<h1><a href="#">Synchronous</a></h1>
+						<h1><a href="#">Paolo Merialdo</a></h1>
 						<span>Design by TEMPLATED</span>
 					</div>
 					
